# PydanticRDF

./: README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
src/pydantic_rdf/: __init__.py  annotation.py  model.py
tests/: test_deserialize.py
