[project]
name = "pydantic-rdf"
version = "0.1.0"
description = "RDF-mappable Pydantic models"
authors = [
    { name = "Omegaice", email = "950526+Omegaice@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.11.3",
    "rdflib>=7.1.4",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff>=0.11.6",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
    "NPY", # numpy
    "PERF",# performance
    "RUF", # ruff-specific rules
]

[tool.ruff.format]
preview = true


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
plugins = []
exclude = "tests/.*"